# mado

./: .gitignore  .pre-commit-hooks.yaml  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  action.yml  downlint.toml  flake.nix  justfile  mado.toml  typos.toml
.cargo/: config.toml
.github/: release.yml
.github/workflows/: cd.yml  ci-action.yml  ci-pkg.yml  ci.yml  taplo.yml  typos.yml
action/: entrypoint.sh
benches/: hard_tab_search.rs  node_traverse.rs  output.rs  trailing_space.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: linter.rs
pkg/homebrew/: mado.rb
pkg/json-schema/: mado.json
pkg/scoop/: mado.json
pkg/winget/: mado.yml
scripts/acceptance/: .mdlrc  setup.sh  test.sh
scripts/benchmarks/: .markdownlint.jsonc  .mdlrc  comparison.sh  mado.toml  package-lock.json  package.json  setup.sh
src/: cli.rs  collection.rs  command.rs  config.rs  diagnostic.rs  document.rs  lib.rs  linter.rs  main.rs  matcher.rs  output.rs  rule.rs  runner.rs  service.rs  violation.rs  visitor.rs  walker.rs
src/command/: check.rs  generate_shell_completion.rs
src/config/: lint.rs  md002.rs  md003.rs  md004.rs
src/config/lint/: md002.rs  md003.rs  md004.rs  md007.rs  md013.rs  md024.rs  md025.rs  md026.rs  md029.rs  md030.rs  md033.rs  md035.rs  md036.rs  md041.rs  md046.rs
src/output/: concise.rs  markdownlint.rs  mdl.rs
src/rule/: helper.rs  line.rs  md001.rs  md002.rs  md003.rs  md004.rs  md005.rs  md006.rs  md007.rs  md009.rs  md010.rs  md012.rs  md013.rs  md014.rs  md018.rs  md019.rs  md020.rs  md021.rs  md022.rs  md023.rs  md024.rs  md025.rs  md026.rs  md027.rs  md028.rs  md029.rs  md030.rs  md031.rs  md032.rs  md033.rs  md034.rs  md035.rs  md036.rs  md037.rs  md038.rs  md039.rs  md040.rs  md041.rs  md046.rs  md047.rs  (+3 more)
src/service/: linter.rs  runner.rs  visitor.rs  walker.rs
tests/: command_check.rs  command_generate_shell_completion.rs  command_invalid.rs
