[package]
name = "mado"
description = "A fast Markdown linter."
version = "0.1.3"
edition = "2021"
repository = "https://github.com/akiomik/mado"
license = "Apache-2.0"
authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
keywords = ["markdown", "lint"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
  "/action",
  "/scripts",
  "/tmp",
  ".node-version",
  ".ruby-version",
  "action.yml",
  "flamegraph.svg"
]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
comrak = "0.33.0"
etcetera = "0.8.0"
ignore = "0.4.23"
linkify = "0.10.0"
miette = { version = "7.4.0", features = ["fancy"] }
regex = "1.11.1"
scraper = "0.22.0"
serde = { version = "1.0", features = ["derive"]  }
toml = "0.8.19"

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1.39"

[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "aix"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"
rand = "0.8"

[profile.release]
lto = "thin"

[profile.bench]
debug = true

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic
module_name_repetitions = "allow"
# restrictions
absolute_paths = "warn"
blanket_clippy_restriction_lints = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
expect_used = "warn"
clone_on_ref_ptr = "warn"
missing_inline_in_public_items = "warn"
shadow_unrelated = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
# TODO: Enable following rules
allow_attributes_without_reason = "allow"
arithmetic_side_effects = "allow"
integer_division_remainder_used = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
multiple_crate_versions = "allow"

[[bench]]
name = "trailing_space"
harness = false

[[bench]]
name = "node_traverse"
harness = false

[[bench]]
name = "output"
harness = false

[[bench]]
name = "hard_tab_search"
harness = false
